# efficio

./: .gitignore  Dockerfile  README.md  output.stl  pillow-11.1.0-cp313-cp313-macosx_10_13_x86_64.whl  pyproject.toml  run.sh  run_checks.sh
.github/workflows/: ci.yml  test.yml
efficio/: __init__.py  __main__.py  measures.py  objects.py  renderer.py
efficio/objects/: __init__.py  base.py  buttons.py  container.py  gears.py  m3.py  primitives.py  shapes.py
tests/: test_gear_teeth.py  test_measures.py  test_shapes.py  test_spatial_geometry.py
