[tool.poetry]
name = "efficio"
version = "0.1.0"
description = ""
authors = ["Richard Lee <rlee@tokyo3.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cadquery = "^2.5.2"
pillow = "^11.1.0"
reportlab = "^4.2.5"
svglib = "^1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest = "^6.2"
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mypy = "mypy.main:main"

[tool.mypy]
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
