[tool.poetry]
name = "efficio"
version = "0.1.0"
description = ""
authors = ["Richard Lee <rlee@tokyo3.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cadquery = "^2.5.2"
pillow = "^11.1.0"
reportlab = "^4.3.0"
svglib = "^1.5.1"
rlPyCairo = "^0.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest = "^8.3.4"
black = "^24.0.0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mypy = "mypy.main:main"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
